Fixed bus map and X misalignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,16 @@
+:root {
+  --sky-blue-color: #7ad7f0;
+  --ghost-white-color: #f5fcff;
+}
+
 * {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h2 {
@@ -22,7 +27,7 @@ h2 {
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: var(--ghost-white-color);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -30,8 +35,8 @@ h2 {
 
 /* Change color on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: var(--sky-blue-color);
+  /*color: black;*/
 }
 
 /* Style the content */
@@ -47,7 +52,22 @@ h2 {
   padding: 10px;
 }
 
-img {
-  max-width: 100%;
-  max-height: 100%;
+.busMap {
+  position: relative;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.img1 {
+  display: block;
+  position: relative;
+}
+
+.img2 {
+  display: block;
+  position: absolute;
+  top: 177px;
+  left: 628px;
+  max-height: 10%;
 }
